--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -94,9 +96,15 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "node_module/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_module/jquery/dist/jquery.min.js",
+              "node_module/@popperjs/core/dist/umd/popper.min.js",
+              "node_module/bootstrap/dist/css/bootstrap.min.css"
+            ]
           }
         }
       }
